@@ -2,5 +2,5 @@ colourmap_DATA = erosion.cpt
 colourmapdir = $(datadir)/PyCF
 dist_colourmap_DATA = $(colourmap_DATA)
 
-bin_SCRIPTS=plot_seds.py
+bin_SCRIPTS=plot_seds.py plot_seds_profile.py
 EXTRA_DIST = $(bin_SCRIPTS)
