@@ -1,3 +1,6 @@
+2005-11-11 Magnus Hagdorn
+ * plot_seds_profile.py: new prog for plotting sediment profiles
+
 2005-10-03 Magnus Hagdorn
  * erosion_types.f90: new switch to enable sliding velo calculations
  * erosion_sediment.f90: use new switch to enable sliding velo calculations
